--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <a href="/coffee/index.html">Coffee</a>
             </li>
             <li>
-                <a href="/booking/index.html">Booking</a>
+                <a href="/food/index.html">Booking</a>
             </li>
             <li>
                 <a href="/interior/index.html">Interior</a>
