--- a/booking/index.html
+++ b/booking/index.html
@@ -7,7 +7,7 @@
         
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Gilda+Display&display=swap" rel="stylesheet"> 
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style.comp.css">
         
         <title>Booking</title>
     </head>
