FIX: Fix booking styles

--- a/booking/index.html
+++ b/booking/index.html
@@ -7,7 +7,7 @@
         
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Gilda+Display&display=swap" rel="stylesheet"> 
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style.comp.css">
         
         <title>Booking</title>
     </head>
@@ -164,7 +164,7 @@
         <section class="our-best">
             <picture class="our-best__img">
                 <source srcset="img/header-low.jpg" media="(max-width: 37.5em)">
-                <img src="/img/header.jpg" alt="Picture of our best room.">
+                <img src="img/header.jpg" alt="Picture of our best room.">
             </picture>
             <div class="our-best__content">
                 <h2 class="heading-2 heading-2--light">Find Your Best Room Here</h2>
