ADD: ADD new about me block.

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 
         <!-- Section with main information about me: look like js object -->
         <section id="bio" class="bio">
-            <div class="wrapper">
-                <h2 class="heading-secondary heading-secondary--center-transform  margin-bt-bg">
+            <!-- <div class="wrapper"> -->
+                <h2 class="heading-secondary heading-secondary--center-transform heading-secondary--color-light margin-bt-bg">
                     <span class="heading-secondary--main">Bio</span>
                     <span class="heading-secondary--sub">Something about me</span>
                 </h2>
@@ -109,7 +109,7 @@
                     </div>
                 </div>
 
-            </div>
+            <!-- </div> -->
         </section>
       
 
@@ -126,7 +126,7 @@
 
         <!-- Small section where is posible to download a resume -->
         <div class="resume" id="resume">
-            <a class="resume resume__link" href="#">
+            <a class="resume resume__link" href="img/CV.pdf">
                 <span class="resume__title">View my resume</span>
                 <span class="resume__text">Download</span>
             </a>
@@ -136,9 +136,7 @@
         <!-- There are be my best works in this section-->
         <section id="portfolio" class="portfolio">
             <div class="wrapper">
-
                 <h2 class="heading-secondary heading-secondary--center-transform  heading-secondary--color-light">
-
                     <span class="heading-secondary--main">Portfolio</span>
                     <span class="heading-secondary--sub">Some of my works</span>
                 </h2>
